templates/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-prometheus
  namespace: monitoring-grafana
spec:
  basicAuth:
    secret: prometheus-basic-auth
