templates/alertmanager-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.phink8s.com`)
      kind: Rule
      middlewares:
        - name: basic-auth-prometheus
          namespace: monitoring
      services:
        - name: monitoring-kube-prometheus-alertmanager
          port: 9093
  tls:
    certResolver: wildcard-phink8s.com-tls
