templates/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prome.phink8s.com`)
      kind: Rule
      middlewares:
        - name: basic-auth-prometheus   # see middleware below
          namespace: monitoring
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
  tls:
    certResolver: wildcard-phink8s.com-tls
